AB#302510 : Fixed Gap issue in CTA on Content Feature Module.

--- a/docroot/themes/custom/emulsifymars/components/02-molecules/content-feature/_content-feature.scss
+++ b/docroot/themes/custom/emulsifymars/components/02-molecules/content-feature/_content-feature.scss
@@ -50,6 +50,14 @@
     position: relative;
     margin: 0 auto;
     max-width: 1050px;
+    
+    @include xl { 
+      height: 100%; 
+      display: flex; 
+      flex-direction: column;  
+      align-items: center;  
+      justify-content: center; 
+    } 
   }
 
   & .eyebrow {
